Fix issue where modal won't scroll because of overflow

--- a/test.css
+++ b/test.css
@@ -1,10 +1,5 @@
-html body {
-    padding-top: 130px;
-    padding-bottom: 130px;
-}
-.navBar {
-    background-color: #FF8888;
-}
+
+
 .name-header {
     background-color: rgb(216, 216, 216);
 }
